# Python-project-template

./: .gitignore  README.md  genindex.html  getting_started.html  index.html  initialization.html  initialization.logger_control.html  initialization.system_information.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sync-files.yml
_modules/: index.html  main.html
_modules/initialization/: logger_control.html  system_information.html
_sources/: getting_started.md.txt  index.md.txt  index.rst.txt  initialization.logger_control.rst.txt  modules.rst.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  search.html  searchindex.js
docs/source/: about_this_documentation.md  conf.py  getting_started.md  index.md  initialization.rst  modules.rst
docs/source/libs/: modules.rst  tests.rst  tests.test_core.rst
docs/source/modules/: utils.logger_control.rst  utils.print_simple.rst  utils.rst
html/: .buildinfo.bak
libs/python_information/: pyproject.toml
libs/python_information/src/python_information/: __init__.py  core.py  exceptions.py
libs/python_information/tests/: test_core.py
src/: main.py  requirements.txt
src/utils/: __init__.py  logger_control.py  print_simple.py
