[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_information"
version = "1.0.0"
description = "Utilities to get information about the python installed version"
authors = [
    {name = "Brayan Camilo Valenzuela Rincon", email = "brayanv395@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"